--- a/content.scss
+++ b/content.scss
@@ -2,5 +2,5 @@
   border-top-width: 72px;
   border-bottom-width: 69px;
   border-bottom-width: 62px;
-  font-size: 94px;
+  border-left-width: 16px;
 }
