--- a/content.scss
+++ b/content.scss
@@ -3,5 +3,5 @@
   border-bottom-width: 69px;
   border-bottom-width: 62px;
   margin-right: 75px;
-  padding-right: 75px;
+  border-bottom-width: 71px;
 }
